crates/wesl-test/tests/snapshots/testsuite__bevy::animate_shader.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@group(0) @binding(11)
var<uniform> bevy_pbr__2mesh_view_bindings_globals: bevy_render_globals_Globals;

struct bevy_pbr__1forward_io_VertexOutput {
    @builtin(position)
    position: vec4<f32>,
    @location(0)
    world_position: vec4<f32>,
    @location(1)
    world_normal: vec3<f32>,
    @location(2)
    uv: vec2<f32>,
    @location(6) @interpolate(flat)
    instance_index: u32
}

struct bevy_render_globals_Globals {
    time: f32,
    delta_time: f32,
    frame_count: u32
}

@fragment
fn fragment(in: bevy_pbr__1forward_io_VertexOutput) -> @location(0) vec4<f32> {
    let speed: f32 = 2.0;
    let t_1: f32 = sin(bevy_pbr__2mesh_view_bindings_globals.time * speed) * 0.5 + 0.5;
    let t_2: f32 = cos(bevy_pbr__2mesh_view_bindings_globals.time * speed);
    let distance_to_center: f32 = distance(in.uv, vec2(0.5f, 0.5f)) * 1.4;
    let red: vec3<f32> = vec3(0.627955f, 0.224863f, 0.125846f);
    let green: vec3<f32> = vec3(0.86644f, -0.233887f, 0.179498f);
    let blue: vec3<f32> = vec3(0.701674f, 0.274566f, -0.169156f);
    let white: vec3<f32> = vec3(1f, 0f, 0f);
    let mixed: vec3<f32> = mix(mix(red, blue, t_1), mix(green, white, t_2), distance_to_center);
    return vec4<f32>(oklab_to_linear_srgb(mixed), 1.0);
}

fn oklab_to_linear_srgb(c: vec3<f32>) -> vec3<f32> {
    let L: f32 = c.x;
    let a: f32 = c.y;
    let b: f32 = c.z;
    let l_: f32 = L + 0.3963377774 * a + 0.2158037573 * b;
    let m_: f32 = L - 0.1055613458 * a - 0.0638541728 * b;
    let s_: f32 = L - 0.0894841775 * a - 1.291485548 * b;
    let l: f32 = l_ * l_ * l_;
    let m: f32 = m_ * m_ * m_;
    let s: f32 = s_ * s_ * s_;
    return vec3<f32>(4.0767416621 * l - 3.3077115913 * m + 0.2309699292 * s, -1.2684380046 * l + 2.6097574011 * m - 0.3413193965 * s, -0.0041960863 * l - 0.7034186147 * m + 1.707614701 * s);
}
