crates/wesl-test/tests/snapshots/testsuite__bulkTests::alpenglow::bicyclic_scan_03_lower_scan.wgsl.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@group(0) @binding(0)
var<storage, read_write> data: array<vec2<u32>, 3>;

var<workgroup> scratch: array<vec2<u32>, 64>;

@compute @workgroup_size(32)
fn main(@builtin(global_invocation_id) global_id: vec3<u32>, @builtin(local_invocation_id) local_id: vec3<u32>, @builtin(workgroup_id) workgroup_id: vec3<u32>) {
    {
        let base_striped_index: u32 = workgroup_id.x * 64u + local_id.x;
        {
            let striped_index: u32 = base_striped_index + 0u;
            var lm_val: vec2<u32>;
            if (striped_index < 2u) {
                lm_val = data[striped_index];
            }
            else {
                lm_val = vec2(0u, 0u);
            }
            scratch[striped_index - workgroup_id.x * 64u] = lm_val;
        }
        {
            let striped_index: u32 = base_striped_index + 32u;
            var lm_val: vec2<u32>;
            if (striped_index < 2u) {
                lm_val = data[striped_index];
            }
            else {
                lm_val = vec2(0u, 0u);
            }
            scratch[striped_index - workgroup_id.x * 64u] = lm_val;
        }
    }
    workgroupBarrier();
    var value: vec2<u32> = scratch[local_id.x * 2u];
    {
        value = (value + scratch[local_id.x * 2u + 1u] - min(value.y, scratch[local_id.x * 2u + 1u].x));
        scratch[local_id.x * 2u + 1u] = value;
    }
    workgroupBarrier();
    if (local_id.x >= 1u) {
        value = (scratch[(local_id.x - 1u) * 2u + 1u] + value - min(scratch[(local_id.x - 1u) * 2u + 1u].y, value.x));
    }
    workgroupBarrier();
    scratch[(local_id.x) * 2u + 1u] = value;
    workgroupBarrier();
    if (local_id.x >= 2u) {
        value = (scratch[(local_id.x - 2u) * 2u + 1u] + value - min(scratch[(local_id.x - 2u) * 2u + 1u].y, value.x));
    }
    workgroupBarrier();
    scratch[(local_id.x) * 2u + 1u] = value;
    workgroupBarrier();
    if (local_id.x >= 4u) {
        value = (scratch[(local_id.x - 4u) * 2u + 1u] + value - min(scratch[(local_id.x - 4u) * 2u + 1u].y, value.x));
    }
    workgroupBarrier();
    scratch[(local_id.x) * 2u + 1u] = value;
    workgroupBarrier();
    if (local_id.x >= 8u) {
        value = (scratch[(local_id.x - 8u) * 2u + 1u] + value - min(scratch[(local_id.x - 8u) * 2u + 1u].y, value.x));
    }
    workgroupBarrier();
    scratch[(local_id.x) * 2u + 1u] = value;
    workgroupBarrier();
    if (local_id.x >= 16u) {
        value = (scratch[(local_id.x - 16u) * 2u + 1u] + value - min(scratch[(local_id.x - 16u) * 2u + 1u].y, value.x));
    }
    workgroupBarrier();
    scratch[(local_id.x) * 2u + 1u] = value;
    workgroupBarrier();
    var added_value: vec2<u32> = select(vec2(0u, 0u), scratch[local_id.x * 2u - 1u], local_id.x > 0);
    {
        let index: u32 = local_id.x * 2u + 0u;
        var current_value: vec2<u32>;
        current_value = (added_value + scratch[index] - min(added_value.y, scratch[index].x));
        scratch[index] = current_value;
    }
    workgroupBarrier();
    {
        let coalesced_local_index: u32 = 0u + local_id.x;
        let coalesced_data_index: u32 = workgroup_id.x * 64u + coalesced_local_index;
        if (coalesced_data_index < 2u) {
            data[coalesced_data_index] = scratch[coalesced_local_index];
        }
    }
    {
        let coalesced_local_index: u32 = 32u + local_id.x;
        let coalesced_data_index: u32 = workgroup_id.x * 64u + coalesced_local_index;
        if (coalesced_data_index < 2u) {
            data[coalesced_data_index] = scratch[coalesced_local_index];
        }
    }
}
